--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -7,3 +7,11 @@
 #greeting-container {
   margin-top: 20px;
 }
+
+#map {
+margin-left: auto;
+  margin-right: auto;
+  border: thin solid black;
+  height: 650px;
+  width: 650px;
+}
